@@ -17,6 +17,8 @@
 #
 SUBDIRS = src . scripts tools testsuite doc
 
+ACLOCAL_AMFLAGS = -Iconfig
+
 # List files that should go into the distribution but are not required
 # by any other means
 EXTRA_DIST = darwinlink.sh \
@@ -29,7 +31,7 @@ EXTRA_DIST = darwinlink.sh \
 #################################################################
 # Two binaries are generated: Espresso for the build dir,
 # Espresso.install for the installation dir. 
-# The ".install" suffix is removed upon installation
+# The ".install" suffix is removed upon installation.
 
 noinst_PROGRAMS = Espresso
 Espresso_CPPFLAGS = -D 'ESPRESSO_SCRIPTS_DEFAULT="$(buildscriptsdir)"'
