@@ -1,6 +1,7 @@
 /*
-  Copyright (C) 2010 The ESPResSo project
-  Copyright (C) 2002,2003,2004,2005,2006,2007,2008,2009,2010 Max-Planck-Institute for Polymer Research, Theory Group, PO Box 3148, 55021 Mainz, Germany
+  Copyright (C) 2010,2011 The ESPResSo project
+  Copyright (C) 2002,2003,2004,2005,2006,2007,2008,2009,2010 
+    Max-Planck-Institute for Polymer Research, Theory Group
   
   This file is part of ESPResSo.
   
@@ -17,15 +18,12 @@
   You should have received a copy of the GNU General Public License
   along with this program.  If not, see <http://www.gnu.org/licenses/>. 
 */
-/* This is the default file @myconfig@.
+/* This is the default myconfig.h-file. If no other file is found,
+   this file is used.
+
    DO NOT MODIFY THIS FILE! 
-   Instead, copy the file 
-   @top_srcdir@/myconfig-sample.h 
-   to
-   @top_builddir@/@myconfig@
-   or 
-   @top_srcdir@/@myconfig@
-   and modify it there!
+
+   Instead, have a look at @top_builddir@/myconfig-sample.h.
 */
 /* global features */
 #define PARTIAL_PERIODIC
