@@ -97,7 +97,9 @@ Changes visible for developers
   has moved to GNU Savannah (see above).
 
 * The .c/.h/.cu source files have been moved to the subdirectory
-  src/.
+  src/. The Espresso binary is still placed in the top-level build
+  directory. myconfig.h may be placed eitther in the src/ or top-level
+  dirs.
 
 * The automatically generated files configure and Makefile.in are not
   part of the repository anymore.  A developer can generate them using
